Fixed gap between NFT Name and image

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ width: 300px;
 }
 
 .nftname {
-  margin-left: 25px;
+  margin-left: 20px;
   font-weight: 600;
 }
 
